# QuantSim_Automator

./: .coverage  .dockerignore  .env  .gitignore  API.txt  Dockerfile  Makefile  README.md  docker-compose.yml  local.txt  package-lock.json  pyproject.toml  requirements.txt  result.json  Путь.txt  ТЗ.txt
.github/workflows/: backend.yml  ci.yml  compose.yml  frontend.yml  tests.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
backend/src/api/: main.py
backend/src/api/dependencies/: users.py
backend/src/api/routers/: auth.py  auth_google.py  auth_oauth.py  auth_refresh.py  report.py  simulate.py  simulate_async.py  simulate_kafka.py  simulate_tasks.py  simulations_history.py  system.py  ws_simulations.py
backend/src/cli/: run.py
backend/src/core/: __init__.py  command_parser.py  config.py  portfolio_builder.py  portfolio_simulator.py  prices.py  simulation_result.py
backend/src/core/fetchers/: yfinance_fetcher.py
backend/src/db/: database.py
backend/src/db/migrations/: alembic.ini  env.py
backend/src/db/migrations/versions/: 20251101_0001_init_schema.py  20251103_add_users.py  20251106_add_asset_prices.p.py
backend/src/db/models/: __init__.py  asset_model.py  asset_price_model.py  metric_model.py  refresh_token_model.py  simulation_model.py  user_model.py
backend/src/schemas/: simulation.py
backend/src/services/: auth.py  reports.py  reports_cache.py  worker.py
backend/src/services/kafka/: consumer.py  init_topics.py  main.py  producer.py
backend/src/services/kafka/scripts/: send_kafka_event.py
backend/src/services/redis/: cache.py  pubsub.py
backend/src/services/worker/: app_scheduler.py  celery_app.py  fetch_tasks.py  simulation_runner.py  tasks.py
backend/src/tests/: conftest.py  test_api.py  test_cli_run.py  test_command_parser.py  test_metrics.py  test_portfolio_builder.py  test_simulate_router.py  test_simulation_result.py
backend/src/tests/e2e/: test_simulate_async_flow.py  test_simulation_ws.py
backend/src/tests/integration/: test_auth_flow.py  test_celery_simulation_flow.py  test_consistency_kafka_db.py  test_infra.py  test_kafka_pipeline.py  test_load_monitoring.py  test_metrics.py  test_migrations.py  test_monitoring.py  test_protected.py  test_protected_routers.py  test_report_cache.py  test_report_endpoint.py  test_simulate_async.py  test_simulate_async_flow.py  test_simulate_persist.py  test_simulate_with_auth.py  test_simulations_history.py  test_user_isolation.py  test_ws_bridge.py
backend/src/tests/load/: locustfile.py
backend/src/tests/unit/: test_api.py  test_auth.py  test_cli_run.py  test_command_parser.py  test_config.py  test_db_models_crud.py  test_metrics.py  test_portfolio_builder.py  test_portfolio_simulator.py  test_reports.py  test_schemas.py  test_simulate_async.py  test_simulate_router.py  test_simulations_history.py  test_system_router.py  test_yfinance_fetcher.py
cli/: run.py
core/: portfolio.py
core/fetchers/: yfinance_fetcher.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  OAuthCallback.tsx  index.css  main.tsx  setupTests.ts  types.d.ts
frontend/src/api/: client.ts  events.ts
frontend/src/components/: HistoryModal.tsx  LoginForm.tsx  MetricCard.tsx  Navbar.tsx  Notifications.tsx  ReportCard.tsx  SignUpForm.tsx
frontend/src/components/__tests__/: Notifications.test.tsx
frontend/src/pages/: HistoryPage.tsx  SimulationDetail.tsx
frontend/src/store/: auth.ts
frontend/src/types/: react-plotly.d.ts  vite.d.ts
frontend/tests/e2e/: auth-simulate.spec.ts  e2e_login.spec.ts  e2e_report.spec.ts  e2e_simulation.spec.ts  full_flow.spec.ts  simulation-history.spec.ts  simulation-notification.spec.ts  simulation-realtime.spec.ts
frontend/tests/integration/: historyPage.test.tsx  simulationDetail.test.tsx
frontend/tests/unit/: authStore.test.ts
kafka/: docker-compose.override.yml
kafka/topics_config/: metrics-events.json  portfolio-events.json  report-events.json
monitoring/grafana/dashboards/: fastapi-celery.json  fastapi-overview.json  kafka.json  redis-health.json  system-health.json
monitoring/grafana/provisioning/: dashboards.yml
monitoring/prometheus/: prometheus.yml
src/backend/: main.py
src/backend/routers/: simulate.py
src/backend/schemas/: simulation.py
src/cli/: run.py
src/core/: portfolio.py
src/core/fetchers/: yfinance_fetcher.py
src/quant_sim_automator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_metrics.py
