[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-sim-automator"
version = "0.2.0"
description = "QuantSim Automator: modular portfolio simulation system"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "pandas",
  "numpy",
  "typer[all]",
  "pytest",
  "yfinance"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core", "cli"]
exclude = ["tests"]
