[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-sim-automator"
version = "0.2.0"
description = "QuantSim Automator: modular portfolio simulation system"
authors = [
  { name = "52Sides", email = "everybody.knows.1152@gmail.com" }
]
dependencies = [
  "pandas",
  "numpy",
  "typer[all]",
  "pytest",
  "yfinance"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "cli"]
