[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-sim-automator"
version = "0.2.3"
description = "QuantSim Automator: modular portfolio simulation system"
authors = [{ name = "52Sides", email = "everybody.knows.1152@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "typer[all]",
  "yfinance>=0.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "pydantic-settings",
  "sqlalchemy",
  "asyncpg",
  "psycopg2-binary",
  "redis",
  "celery",
  "kafka-python",
  "python-dotenv",
  "httpx>=0.27",
  "loguru",
  "alembic",
  "tenacity",
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "flake8",
  "black",
  "isort",
  "sqlalchemy[asyncio]>=2.0.25",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "aiosqlite"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["api", "cli", "core", "db", "schemas", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: isolated tests without external deps",
    "integration: tests using Postgres, API, Kafka etc."
]